<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.password.PasswordFragment">

<!-- Inicio cópia-->
    <TextView
        android:id="@+id/tituloCreateSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_titulo"
        android:textColor="#00B8D4"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloCreateSenha">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblNomeEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_lbl_nome"
                tools:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_name_hint"
                    tools:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblLoginEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_lbl_login"
                tools:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_login_hint"
                    tools:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblSenhaEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_lbl_senha"
                tools:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_senha_hint"
                    tools:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/input_name"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblURLEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_lbl_url"
                tools:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_url_hint"
                    tools:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSenhaAleatoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/create_btn_aleatoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00BCD4"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_done"
        app:tint="#ffffff" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnVoltar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#595A5A"
        android:clickable="true"
        app:backgroundTint="#595A5A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_undo"
        app:tint="#ffffff"/>

<!--Fim copia-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:id="@+id/input_name"-->
<!--        android:layout_width="352dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_marginTop="564dp"-->
<!--        android:hint="@string/password_name_hint"-->
<!--        android:inputType="textCapSentences"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.728"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--&lt;!&ndash;        android:id="@+id/input_password"&ndash;&gt;-->
<!--        android:layout_width="351dp"-->
<!--        android:layout_height="59dp"-->
<!--        android:layout_marginTop="184dp"-->
<!--        android:hint="@string/password_hint"-->
<!--        android:inputType="textCapSentences"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.616"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--&lt;!&ndash;        app:layout_constraintTop_toBottomOf="@+id/input_name"&ndash;&gt;-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <Button-->
<!--        android:id="@+id/button_password"-->
<!--        android:layout_width="366dp"-->
<!--        android:layout_height="59dp"-->
<!--        android:layout_marginTop="208dp"-->
<!--        android:text="@string/add_button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/input_password" />-->

</androidx.constraintlayout.widget.ConstraintLayout>