<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/input_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Netflix"
                android:textColor="#474747"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_lbl_senha"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_password_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="***********"
                android:textColor="#7A7A7A"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_lbl_url"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="www.netflix.com"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_lbl_login"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="usuario@email.com"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>



<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="vertical"-->
<!--android:paddingStart="16dp"-->
<!--android:paddingTop="8dp"-->
<!--android:paddingEnd="16dp"-->
<!--android:paddingBottom="8dp">-->

<!--<TextView-->
<!--    android:id="@+id/text_password_name"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:textSize="24sp"-->
<!--    android:textStyle="bold"-->
<!--    tools:text="Netflix"/>-->
<!--<TextView-->
<!--    android:id="@+id/text_password_password"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:textSize="18sp"-->
<!--    android:textColor="#7A7A7A"-->
<!--    android:textStyle="bold"-->
<!--    tools:text="123456"/>-->
<!--    </LinearLayout>-->